--- a/index.html
+++ b/index.html
@@ -93,6 +93,30 @@
           </div>
     </div>
     <!-- End Banner Area -->
+    <!-- Start Categories Area -->
+    <div class="container cat">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cat1 d-flex align-items-center justify-content-around">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="watch">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat2 d-flex align-items-center justify-content-around">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="bag">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="cat3 d-flex align-items-center justify-content-around">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="shoes">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Categories Area -->
 
 
     <!-- JavaScript -->
