--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Start Navbar Area -->
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -117,6 +117,40 @@
         </div>
     </div>
     <!-- End Categories Area -->
+    <!-- Start Shoes Area -->
+    <div class="container shoes" id="shoes">
+      <h1>Shoes</h1>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="shoe-1">
+          <div class="card-body">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium tempora praesentium nostrum.</p>
+            <h5>$260</h5>
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="shoe-2">
+          <div class="card-body">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium tempora praesentium nostrum.</p>
+            <h5>$320</h5>
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="shoe-3">
+          <div class="card-body">
+            <h5 class="card-title">Red Airmax</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium tempora praesentium nostrum.</p>
+            <h5>$350</h5>
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Shoes  Area -->
 
 
     <!-- JavaScript -->
