--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
     <!-- End Categories Area -->
     <!-- Start Shoes Area -->
-    <div class="container shoes" id="shoes">
+    <div class="container" id="shoes">
       <h1>Shoes</h1>
       <div class="card-deck">
         <div class="card">
@@ -151,7 +151,61 @@
       </div>
     </div>
     <!-- End Shoes  Area -->
-
+    <!-- Start Backpack  Area -->
+    <div class="container" id="backpack">
+      <h1>Backpack</h1>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="bag-1">
+          <div class="card-body">
+            <h5 class="card-title">Red Laltu Bag</h5>
+            <h5>$150</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="bag-2">
+          <div class="card-body">
+            <h5 class="card-title">Blue Niltu Bag</h5>
+            <h5>$210</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="bag-3">
+          <div class="card-body">
+            <h5 class="card-title">Black Kaltu Bag</h5>
+            <h5>$180</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="our-btn">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Backpack Area -->
+    <!-- start contactus area-->
+    <div class="container d-flex justify-content-center align-items-center orange-bg" id="contactus">
+      <div>
+        <h3>GET STAY IN TOUCH</h3>
+        <h6>Get update on sale, specials and more</h6>
+        <input class="form-control" type="email" placeholder="Enter your email">
+        <button class="our-btn">Subscribe Now</button>
+      </div>
+    </div>
+    <!-- end contactus area-->
+    <!-- start footer area -->
+    <footer>
+      <small>&copy; 2020. Panda Commerce. All rights reserved. Sofia, USA.</small>
+    </footer>
+    <!-- end footer area -->
 
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
